--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,9 +1,13 @@
 <header>
   <nav>
+    Demo Web
     <a href="/">Home</a>
+    <% if (isLoggedIn) { %>
     <a href="/users">Users</a>
+    <a href="/auth/logout">Logout</a>
+    <% } else { %>
     <a href="/auth/register">Register</a>
     <a href="/auth/login">Login</a>
-    <a href="/auth/logout">Logout</a>
+    <% } %>
   </nav>
 </header>
