--- a/public/css/main.css
+++ b/public/css/main.css
@@ -86,3 +86,13 @@ button:hover {
 p {
   margin-top: 10px;
 }
+
+.error-container {
+  max-width: 600px;
+  margin: auto;
+  background-color: #ffffff;
+  border: 1px solid #ffeeba;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
