--- a/src/views/partials/form.ejs
+++ b/src/views/partials/form.ejs
@@ -1,4 +1,5 @@
 <form action="/auth/<%= action %>" method="POST">
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
   <div class="form-group">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required />
