--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <%- style %>
   </head>
   <body>
     <%- include('../partials/header') %>
