--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -1,13 +1,15 @@
-<h1>Users List</h1>
+<link rel="stylesheet" href="/css/users.css" />
+
+<h1 class="page-title">Users List</h1>
 
 <% if (users.length) { %>
-<ul>
+<ul class="user-list">
   <% users.sort((a, b) => a.created_at - b.created_at).forEach(user => { %>
-  <li>
-    <a href="/users/<%= user.id %>"><%= user.username %></a>
+  <li class="user-item">
+    <a class="user-link" href="/users/<%= user.id %>"><%= user.username %></a>
   </li>
   <% }); %>
 </ul>
 <% } else { %>
-<p>No users yet!</p>
+<p class="no-users-message">No users yet!</p>
 <% } %>
